--- a/WebApiAuthenticationJWT/appsettings.Development.json
+++ b/WebApiAuthenticationJWT/appsettings.Development.json
@@ -1,4 +1,10 @@
-{
+{"tokenManagement": {
+    "secret": "asdasdasdasffgfghnhgfhjndghg",
+    "issuer": "mateuscosta.dev",
+    "audience": "WAPIJWTAudience",
+    "accessExpiration": 30,
+    "refreshExpiration": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
